# bazel-rust-prototype

./: README.md
actix-web/: BUILD  README.md
actix-web/src/: main.rs
bazel/: WORKSPACE  rust-project.json
bazel/dependencies/actix-web/: Cargo.toml
bazel/dependencies/actix-web/src/: main.rs
bazel/dependencies/bazel_rules/rules_rust-v0.20.0/crate_universe/private/: urls.bzl
dockerdev/: .dockerignore  configure_bazel_rust_nvim.sh  dockerfile  end.sh  nuke_docker.sh  setup.md  start.sh
rust/: .vimspector.json  BUILD  README.md
